# execution_policy_exception

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yaml
src/: executionpolicy.rs  main.rs
